[package]
name = "rDnsToy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
clap = { version = "4.0.7", features = ["derive", "env"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
trust-dns-server = "0.22.0"

[profile.release]
opt-level = "z"
lto = "thin"
debug = false
strip = true